# genai4humanities-lab

./: .gitignore  README.md  main.py  pyproject.toml
hw5/: Copy_of_GenAI_hw5_LLM_finetuning.ipynb
week10_ai_storytime/: README.md  app.py  pyproject.toml
week10_ai_storytime/data/: trump_transcript.txt
week10_ai_storytime/data/story/: story.json
week10_ai_storytime/data/tea/: story.json
week10_ai_storytime/data/the_wolf_and_the_seven_kids/: story.json  the_wolf_and_the_seven_kids.json
week10_ai_storytime/data/tts/: transcription.txt
week10_ai_storytime/notebooks/: week10.ipynb
week10_ai_storytime/src/ai_storytime/: asr.py  models.py  prompts.py  tts.py  utils.py
week8/: openai_api_demo.ipynb  openai_api_demo.py
week9/: exercise.ipynb  exercise.py  st2_t2s_voice_cloning.ipynb  st2_t2s_voice_cloning.py
week9/data/: inference.toml
