[project]
name = "ai_storytime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "f5-tts>=1.1.0",
    "google-genai>=1.11.0",
    "gradio>=5.14.0",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.1.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
